# Pesquisador_galzy

./: .gitignore  README.md  WALKTHROUGH.md  onion_hunter.py  onion_searcher.py  onion_vault.db  pyproject.toml  requirements.txt
docs/: architecture.mermaid  legal_scope.md
src/: main.py
src/crawler/: base_crawler.py
src/discovery/: seed_manager.py
src/normalization/: language_det.py  parser.py
src/semantics/: embeddings.py
